# sat-solver

./: .gitignore  Cargo.toml  README.md  compile.sh  pgo_mac.txt  run.sh  runAll.sh  run_cdcl_vsids_ccm_del_50.txt  run_cdcl_vsids_ccm_del_hakusho.txt  run_m8.txt  run_no_ccm_del.txt  run_rand.txt  run_rand_2000_300.txt  run_rand_5000_1000.txt  run_rand_ccm_del.txt  run_rand_fixed_var_acts.txt  run_rand_lbd_act.txt  run_w_ccm_del.txt  team.txt  test.txt
report/: references.bib  report.tex
run_results/: pgo_opt.txt  run_cdcl_vsids_ccm_del_75.txt
src/: main.rs
src/dimacs/: mod.rs  parser.rs  sat_instance.rs
src/solver/: assignment_trail.rs  cdcl_solver.rs  clause.rs  config.rs  mod.rs  stats.rs  types.rs  util.rs  watch_list.rs
