[package]
name = "project1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
daggy = "0.8.0"
env_logger = "0.11.3"
fxhash = "0.2.1"
log = "0.4.21"
mut-binary-heap = "0.1.0"
ordered-float = "4.2.0"
rand = "0.8.5"
ringbuf = "0.3.3"
slotmap = "1.0.7"

[profile.release]
codegen-units = 16
debug = true
lto = "thin"

[profile.bench]
debug = true
